# deep-text-recognition-benchmark

./: .gitignore  dataset.py  demo.py  download_pretrained.sh  environment.yml  inference.py  pyproject.toml  run_demo.sh
dl_ocr_bench/: demo.py  download_pretrained.py  inference.py  model.py  run_demo.sh  test.py  train.py
dl_ocr_bench.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
