[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "dl_ocr_bench"
version = "0.1.0"
description = "Text recognition (optical character recognition) with deep learning methods"
readme = "README.md"
requires-python = ">=3.11"
authors = [
    {name = "NAVER Corp", email = "naver@naver.com"},
]
license = {text = "Apache-2.0"}
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Scientific/Engineering :: Image Recognition",
]
dependencies = [
    "torch>=1.8.0",
    "torchvision>=0.9.0",
    "pillow>=8.0.0",
    "nltk>=3.6.0",
    "natsort>=8.0.0",
    "lmdb>=1.0.0",
    "gdown>=4.0.0",
    "opencv-python>=4.5.0",
    "numpy>=1.20.0",
    "matplotlib>=3.3.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=6.0.0",
    "black>=21.0.0",
    "isort>=5.0.0",
    "flake8>=3.8.0",
]

[project.urls]
Homepage = "https://github.com/clovaai/deep-text-recognition-benchmark"
Repository = "https://github.com/clovaai/deep-text-recognition-benchmark"
Issues = "https://github.com/clovaai/deep-text-recognition-benchmark/issues"

[project.scripts]
demo = "demo:main"
download-pretrained = "download_pretrained:download_pretrained"

[tool.setuptools.packages.find]
where = ["."]
include = ["*"]
exclude = ["tests*", "docs*", "demo_image*", "figures*"]